Enhance ACQUA DI GIO product description
Updated product description for ACQUA DI GIO to provide more detailed information about the fragrance.

--- a/PRY_PAGINA_TAREA_3/view/AQUA_DI_GIO.html
+++ b/PRY_PAGINA_TAREA_3/view/AQUA_DI_GIO.html
@@ -54,7 +54,7 @@
                             <span class="text-decoration-line-through">$145.00</span>
                             <span>$140.00</span>
                         </div>
-                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
+                        <p class="lead">Un clásico moderno que captura la esencia del mar y la frescura mediterránea. Combina notas cítricas de lima y bergamota con jazmín, romero y pachulí sobre una base amaderada y marina. Es una fragancia ligera, limpia y natural que transmite libertad y equilibrio. Perfecta para el uso diario, climas cálidos o ambientes informales, ideal para hombres que buscan un aroma fresco y sofisticado.</p>
                         <div class="d-flex">
                             <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
@@ -181,4 +181,5 @@
         <!-- Core theme JS-->
         <script src="../public/vendor/js/scripts.js"></script>
     </body>
+
 </html>
